fix intro sentence on mobile devices

--- a/assets/sass/_type.scss
+++ b/assets/sass/_type.scss
@@ -24,7 +24,9 @@ a{
 	line-height: 0.9;
 
 	.line{
-		white-space: nowrap;
+		@media (min-width: $reflex-md) {
+			white-space: nowrap;
+		}
 	}
 
 	.px{
